# tpuserve

./: .gitignore  CMakeLists.txt  Makefile  README.md  macro.h  mix.exs  model.cc  model.h  tpuserve.cc
c_src/: logging.h  shape.cc  shape.h  tpuserve.cc  tpuserve_buffer.cc  tpuserve_buffer.h  tpuserve_client.cc  tpuserve_client.h  tpuserve_driver.cc  tpuserve_driver.h  tpuserve_model.cc  tpuserve_model.h  tpuserve_nif_util.cc  tpuserve_nif_util.h
lib/: tpuserve.ex
lib/tpuserve/: application.ex  driver.ex  endpoint.ex  error.ex  inference_handler.ex  model.ex  model_config.ex  model_manager.ex  nif.ex  protocol.ex
models/: fn_hlo.pb  fn_hlo.txt  model.pb  prog.py  resnet.hlo.txt
models/prog/: config.json  model.hlo.txt
models/resnet/: config.json  model.hlo.txt
models/simple_add/: config.json  model.hlo.txt
test/: test_helper.exs  tpuserve_test.exs
test/tpuserve/: endpoint_test.exs  model_config_test.exs  model_test.exs
